--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.port=8099
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.
+
+testing=asdf
 
 # jpa config
 spring.jpa.generate-ddl=true
